fix images
