# mib/views/message.py
@@ -287,25 +287,25 @@ def message_draft():
 #        return redirect('/')
 #
 
-@message.route('/edit/<_id>',methods=['GET'])
+@message.route('/edit/<int:message_id>',methods=['GET'])
 @login_required
 def message_view_draft(message_id):
     """_message = db.session.query(Messages.title, Messages.content,Messages.id,Messages.sender, Messages.date_of_delivery, Messages.font).filter(Messages.id==message_id).first()
     _receivers = db.session.query(User.id, User.email, User.firstname, User.lastname , Messages.id).join(User, Messages.receivers).filter(Messages.id == _message.id).all()
     _picture = db.session.query(Images).filter(Images.message==_id).all()"""
     _message = MessageManager.get_message_by_id(message_id)
-    _receivers = _message.__getattr__('receivers')
+    _receivers = _message.receivers
     _pictures = MessageManager.get_images(message_id)
 
-    if _message.__getattr__('sender') == current_user.id:
+    if _message.sender == current_user.id:
         l = []
         image_ids = []
         if len(_pictures) > 0:
-            for k in _pictures:
-                image = _pictures[k]['image']
+            for i in range(0,len(_pictures)):
+                image = _pictures[str(i+1)]['image']
                 #image = base64.b64encode().decode('ascii')
                 l.append(image)
-                image_ids.append( _pictures[k]['id'])
+                image_ids.append( _pictures[str(i+1)]['id'])
         return render_template('message_view_edit_draft.html',message = _message, pictures=json.dumps(l),image_ids=image_ids,receivers=_receivers) 
     else:
         return redirect('/')
