# swagger.yml
@@ -257,52 +257,64 @@ paths:
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
               properties:
+                payload:
+                  type: object
+                  properties:
+                    title:
+                      type: string
+                      description: Message title
+                      example: 'New Message to you'
+                    content:
+                      type: string
+                      description: Text of the message
+                      example: 'Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC'
+                    date_of_delivery:
+                      type: string
+                      description: Date when the message will be sent
+                      example: '12-01-2022'
+                    time_of_delivery:
+                      type: string
+                      description: Time when the message will be sent
+                      example: '10:21'
+                    font:
+                      type: string
+                      description: Description of the font of the message
+                      example: 'Arial'
+                    destinator:
+                      type: array
+                      items:
+                        type: integer
+                      description: List of users who will receive the message
+                      example: [2,1]
                 sender:
-                type: integer
-                description: Id of the message's sender
-                example: 1
-              date_of_delivery:
-                type: string
-                description: Date when the message will be sent
-                example: '12/01/2022'
-              time_of_delivery:
-                type: string
-                description: Time when the message will be sent
-                example: '10:21'
-              content:
-                type: string
-                description: Text of the message
-                example: 'Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC'
-              title:
-                type: string
-                description: Message title
-                example: 'New Message to you'
-              bad_content:
-                type: boolean
-                description: Detect bad content in the message
-                example: False
-              number_bad:
-                type: integer
-                description: Number of bad word in the message
-                example: 0
-              font:
-                type: string
-                description: Description of the font of the message
-                example: 'Arial'
-              is_draft:
-                type: boolean
-                description: Describe is the message is finish or not
-                example: True
-              receivers:
-                type: array
-                items:
                   type: integer
-                description: List of users who will receive the message
-                example: [2,1]
+                  description: Id of the message's sender
+                  example: 1
+                message_id:
+                  type: integer
+                  description: Id of the message
+                  example: 0
+                delete_image_ids:
+                  type: array
+                  items:
+                    type: integer
+                  description: List of users who will receive the message
+                  example: []
+                delete_user_ids:
+                  type: array
+                  items:
+                    type: integer
+                  description: List of users who will receive the message
+                  example: []
+                filename:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
       responses:
         302:
           description: Redirects to the correct profile page, depending on the type of the user
